@@ -1,3 +1,7 @@
+2009-03-09  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* BIFO.cc (BFIO::trimBlock): More informative overflow message.
+
 2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* synchronizer.cc, port.cc, music/temporal.hh: Decrement
